Fix svg overlap issue and add favicon links to head in all pages

--- a/css/main.css
+++ b/css/main.css
@@ -534,6 +534,7 @@ footer {
   background-color: #f9fafc;
   border-radius: 50px;
   padding: 40px 30px;
+  position: relative;
 }
 
 .cta-highlight {
